Enforce home carousel height to prevent flickering when scrolling images left.

--- a/dps/src/styles/_carousel.scss
+++ b/dps/src/styles/_carousel.scss
@@ -15,7 +15,7 @@
       position: relative;
 
       > img {
-        max-height: 350px;
+        height: 350px;
         max-width: 90%;
       }
 
